AI-JADEDEVS4/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status_Check__c</fullName>
        <description>Check to see if Contact&apos;s Account Status is either Customer, Cancelled, Company Out of Business, Customer-Strategic Account, or Partner &amp; Customer.  If checked, then users can change Contact Record Type to CUSTOMER; except for System Admin NVM.  This is not on page layouts and is solely for trigger to work on single since cannot be multiple objects.</description>
        <formula>IF
(
OR
(
ISPICKVAL(Account.Account_Status__c,&quot;Customer&quot;),
ISPICKVAL(Account.Account_Status__c,&quot;Cancelled&quot;),
ISPICKVAL(Account.Account_Status__c,&quot;Company Out of Business&quot;),
ISPICKVAL(Account.Account_Status__c,&quot;Customer-Strategic Account&quot;),
ISPICKVAL(Account.Account_Status__c,&quot;Partner &amp; Customer&quot;)),True,False)</formula>
        <inlineHelpText>Check to see if Contact&apos;s Account Status is either Customer, Cancelled, Company Out of Business, Customer-Strategic Account, or Partner &amp; Customer.  If checked, then users can change Contact Record Type to CUSTOMER; except for System Admin NVM.</inlineHelpText>
        <label>Account Status Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Budgeted_Project__c</fullName>
        <label>Budgeted Project</label>
        <picklist>
            <picklistValues>
                <fullName>Needs Justification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPE_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPE Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_New__c</fullName>
        <globalPicklist>test_CRM</globalPicklist>
        <label>CRM New</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <label>CRM</label>
        <picklist>
            <picklistValues>
                <fullName>Microsoft Dynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netsuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle - Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle - PeopleSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle-RightNow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle - Siebel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SugarCRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CSM_Manager_Name__c</fullName>
        <description>This is a marketing used field. It allows Eloqua to pull in the full name of the CSM</description>
        <formula>IF( ISBLANK( Account.Account_CSM__c ),&quot;&quot;,Account.Account_CSM__r.FirstName &amp; &quot; &quot; &amp; Account.Account_CSM__r.LastName)</formula>
        <label>CSM Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Score__c</fullName>
        <description>This field score is calculated based on the MAX score between HubSpot&apos;s or Eloqua&apos;s Score, whichever is highest</description>
        <formula>MAX(HubSpot_Lead_Score__c,CASE(Eloqua_Lead_Score__c,&quot;A1&quot;,88,&quot;B1&quot;,85,&quot;C1&quot;,73,&quot;D1&quot;,71,&quot;A2&quot;,68,&quot;B2&quot;,65,&quot;C2&quot;,53,&quot;D2&quot;,50,&quot;A3&quot;,49,&quot;B3&quot;,47,&quot;C3&quot;,34,&quot;D3&quot;,30,&quot;A4&quot;,25,&quot;B4&quot;,22,&quot;C4&quot;,15,&quot;D4&quot;,10,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field score is calculated based on the MAX score between HubSpot&apos;s or Eloqua&apos;s Score, whichever is highest</inlineHelpText>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Last_Associated_Age__c</fullName>
        <formula>IF(ISNULL( Campaign_Last_Associated_date__c ),&apos;&apos;,TEXT(FLOOR(TODAY() - Campaign_Last_Associated_date__c ))+&apos; Days&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Last Associated Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Last_Associated_date__c</fullName>
        <label>Campaign Last Associated date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capital_Planning_Needs__c</fullName>
        <label>Capital Planning Needs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Balance_Sheet__c</fullName>
        <label>Cash Flow/Balance Sheet</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <label>Competition</label>
        <picklist>
            <picklistValues>
                <fullName>Host Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Hyperion Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle PBCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prophix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Maestro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Cognos TM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaplan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solver BI360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP BPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tagetik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vena Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A3 Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argus Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axiom EPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackbaud ABM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERP Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FISERV Vantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Cognos Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFOR CPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jedox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KCI Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Forecaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft FRx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Management Reporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Consolidation__c</fullName>
        <label>Consolidation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_18_Digit__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <label>Contact 18 Digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Create_Date__c</fullName>
        <description>Uses old create date if not blank, otherwise uses create date</description>
        <formula>IF( !ISBLANK( First_Created_Date__c ),First_Created_Date__c, CreatedDate )</formula>
        <inlineHelpText>Uses old create date if not blank, otherwise uses create date</inlineHelpText>
        <label>Contact Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Profile__c</fullName>
        <formula>Owner.Profile_Formula_Text__c</formula>
        <label>Contact Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status(Archived)</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NLWC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursuing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corresponding_Territory_AE_CAE__c</fullName>
        <inlineHelpText>Field populates from workflow rule/ mapped from lead via conversion</inlineHelpText>
        <label>Corresponding Territory - AE/CAE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa (USA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia &amp; Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Create_Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Partner community User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_owner_profile__c</fullName>
        <formula>CreatedBy.Profile_Formula_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created owner profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Dials__c</fullName>
        <label>Current Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Newsletter_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Newsletter Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Webinars_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Webinars Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dashboard__c</fullName>
        <label>Dashboard</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_Phone__c</fullName>
        <label>Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Display_On_Partner__c</fullName>
        <formula>OR(
	LEFT($User.Related_Contacts_AccountID__c, 15)  =  LEFT(Account.Id,15),
	LEFT(Partner_Contact__c,15) = LEFT( $User.ContactId ,15)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display On Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP__c</fullName>
        <label>ERP</label>
        <picklist>
            <picklistValues>
                <fullName>Abila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AccountMate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCPAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axapta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackbaud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deltek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deltek Costpoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deltek Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellucian Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellucian Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epicor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Famous Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fathom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FinancialForce.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Plains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Grown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intacct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD Edwards EnterpriseOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD Edwards World</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maconomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAS (90,200,500)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Dynamics AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Dynamics GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Dynamics NAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Dynamics SL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft FRx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Education_and_Training_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Education and Training Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eloqua_Create_Date__c</fullName>
        <label>Eloqua Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Score__c</fullName>
        <description>This field used for Eloqua score &amp; its alpha numeric value( Example : A1,B1,C2)</description>
        <inlineHelpText>This field used for Eloqua score &amp; its alpha numeric value( Example : A1,B1,C2)</inlineHelpText>
        <label>Eloqua Lead Score</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enterprise Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expense_Planning__c</fullName>
        <label>Expense Planning</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Created_Date__c</fullName>
        <label>First Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <label>Fiscal Year End</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <label>Follow Up</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptive Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forecasting__c</fullName>
        <label>Forecasting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GA_Adwords_ID__c</fullName>
        <label>GA Adwords ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Content__c</fullName>
        <label>GA Campaign Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Keyword__c</fullName>
        <label>GA Campaign Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Medium__c</fullName>
        <label>GA Campaign Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Name__c</fullName>
        <label>GA Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Landing_Page__c</fullName>
        <label>GA Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Source__c</fullName>
        <label>GA Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Lifecycle_Stage__c</fullName>
        <description>Marketing Accepted and Qualified Lead (MAL/MQL)
Sales Accepted and Qualified Lead (SAL/SQL)</description>
        <globalPicklist>Global_Lifecycle_Stage</globalPicklist>
        <inlineHelpText>Marketing Accepted and Qualified Lead (MAL/MQL)
Sales Accepted and Qualified Lead (SAL/SQL)</inlineHelpText>
        <label>Lifecycle Stage</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HR_New__c</fullName>
        <globalPicklist>HR_Picklist</globalPicklist>
        <label>HR New</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HR__c</fullName>
        <label>HR</label>
        <picklist>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceridian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL Vendor (See GL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paycor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PeopleSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TriNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Had_Live_Demo_Y_N__c</fullName>
        <inlineHelpText>helps to keep track of who we demo-ed to and who didn&apos;t -- specially if a person buys w/o ever having to do live demo</inlineHelpText>
        <label>Had Live Demo? Y/N</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HubSpot_Lead_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Lead Score from HubSpot</description>
        <inlineHelpText>Lead Score from HubSpot</inlineHelpText>
        <label>HubSpot Lead Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubspot_Highest_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Highest Lead Score from HubSpot</description>
        <inlineHelpText>Highest Lead Score from HubSpot</inlineHelpText>
        <label>Hubspot Highest Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In NetSuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incumbent_Budgeting_Tool__c</fullName>
        <label>Incumbent Budgeting Tool</label>
        <picklist>
            <picklistValues>
                <fullName>3ESI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A3 Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acorn Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alight Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaplan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applix/TM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argus Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axiom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI360/Solver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackbaud AMB (Powerplan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Maestro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BudgetPak/XLerant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarity Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FISERV/Vantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRX Forecaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyperion Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyperion Pillar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM - Applix/TM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Clarity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Cognos Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFOR CPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jedox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KCI/Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Khalix Longview</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsNewAccountOnContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNewAccountOnContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_logged_in_user__c</fullName>
        <formula>Owner.ManagerId =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is logged in user</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>